// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/github getPkgReleases returns cleaned tags 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "1.0.0",
      "version": "1.0.0",
    },
    Object {
      "gitRef": "v1.1.0",
      "version": "1.1.0",
    },
  ],
  "sourceUrl": "https://github.com/some/dep",
}
`;

exports[`datasource/github getPkgReleases returns releases 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "1.0.0",
      "version": "1.0.0",
    },
    Object {
      "gitRef": "v1.1.0",
      "version": "v1.1.0",
    },
  ],
  "sourceUrl": "https://github.com/some/dep",
}
`;
